# cognizantaimlapr_2026

./: .gitignore
day10/: pyproject.toml
day10/ecommerce_crud_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
day10/src/ecommerce/: main.py
day10/src/ecommerce/configurations/: conf.py  mysql_conn.py
day10/src/ecommerce/controllers/: catalog_controller.py  customer_controller.py  product_controller.py
day10/src/ecommerce/dtos/: catalog_request.py  catalog_response.py  customer_request.py  customer_response.py  full_name_request.py  product_request.py  product_response.py
day10/src/ecommerce/models/: catalog.py  customer.py  full_name.py  product.py
day10/src/ecommerce/repository/: catalog_repository.py  catalog_repository_impl.py  customer_repository.py  customer_repository_impl.py  product_repository.py  product_repository_impl.py
day10/src/ecommerce/services/: catalog_service.py  catalog_service_impl.py  customer_service.py  customer_service_impl.py  product_service.py  product_service_impl.py
day10/src/ecommerce_crud_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
day10/tests/: test_database_conn.py
day11/: pyproject.toml
day11/banking_crud_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
day11/src/banking_crud_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
day11/src/bankingapp/: main.py
day11/src/bankingapp/configurations/: conf.py  mongodb_conn.py  redis_client.py
day11/src/bankingapp/controllers/: account_controller.py  transaction_controller.py
day11/src/bankingapp/dtos/: account_request.py  account_response.py  account_type.py  transaction_request.py  transaction_response.py  transaction_type.py
day11/src/bankingapp/repositories/: account_repository.py  account_repository_impl.py  transaction_repo.py  transaction_repo_impl.py
day11/src/bankingapp/services/: account_service.py  account_service_impl.py  transaction_service.py  transaction_service_impl.py
day11/tests/: test_mongo_conn.py  test_redis_client.py
day14/: pyproject.toml  sweetviz_report.html  train_vs_test.html
day14/src/linearalgebra/: ca.pem
day14/src/linearalgebra.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
day14/src/linearalgebra/configurations/: conf.py
day14/src/linearalgebra/resources/: AngolaPolynomial.xlsx  AngolaPolynomial_normalized.xlsx  AngolaPolynomial_std_normalized.xlsx  census.csv  ceosalary.csv  cybersecurity.txt  cybersecurity_cleaned.txt  diabetics.xlsx  diabetics_cleaned.xlsx  employees.csv  employees_cleaned.csv  movie_recom.csv  neural_network_digits.csv  productwise_discount.csv  report.html  sales.csv  search_page_names (1).csv  trainee_score.csv  weather_change_report.csv
day14/src/linearalgebra/utils/: bigoprodrecomm.py  bigosort.py  broadcasting.py  census_mat_transpose.py  centering.py  cyber_svd.py  data_clean.py  digits_mat_mul.py  discount_dotproduct.py  eigen.py  image_brightness_mat_add.py  image_mat_inv.py  img_trans_eigen.py  kafka_consumer.py  kafka_producer.py  l2_norm.py  leakage_detect.py  minmax_norm.py  movie_svd.py  parallel.py  robust_scalar.py  sales_mat_det.py  search_algo.py  standard_norm.py  sweetviz_demo.py  weather_change_mat_sub.py  ydata_profile_demo.py
day15/: pizza_report.html  pyproject.toml
day15/kafka_streaming_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
day15/src/kafka_streaming_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
day15/src/kafkamessageapp/: service.cert  service.key
day15/src/kafkamessageapp/configurations/: conf.py  mysql_conf.py
day15/src/kafkamessageapp/models/: customer.py
day15/src/kafkamessageapp/repositories/: customer_repository.py  customer_repository_impl.py
day15/src/kafkamessageapp/resources/: customer_data.csv  pizza_data.csv  pizza_data_categorical.csv  report.html  sweetviz_report.html
day15/src/kafkamessageapp/utils/: dist_profile.py  (+12 more)
day3/: pyproject.toml  reports.html
day3/Healthcare.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
day3/conf/: logger_conf.py
day3/src/Healthcare.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
day3/src/exceptions/: appointment_not_found_exception.py  doctor_not_found_exception.py  patient_not_found_exception.py
day3/src/models/: appointment.py  doctor.py  patient.py  person.py  role.py  staff.py
day3/src/stores/: appointmentstore.py  doctorstore.py  patientstore.py
day3/src/utils/: app.py  main.py
day3/tests/: doctors.csv
day3/tests/contract_testing/: test_doctor.py  test_doctor_store.py
day5/: pyproject.toml
day5/banking_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
day5/src/banking_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
day5/src/configurations/: conf.py
day5/src/dataloaders/: customer_csv_data_loader.py  customer_data_loader.py  customer_json_data_loader.py  customer_txt_data_loader.py
day5/src/exceptions/: customer_not_found.py
day5/src/models/: address.py  company_type.py  corporate.py  customer.py  full_name.py  gender.py  individual.py
day5/src/resources/: customers.txt
day5/src/stores/: customer_store.py  customer_store_impl.py
day5/src/utils/: app.py  pipeline_runner.py
day9/: pyproject.toml
day9/mongodb_crud_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
day9/src/mongodb_crud_cli.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
development/: pyproject.toml
development/src/asyncio_dashboard.egg-info/: PKG-INFO  requires.txt  top_level.txt
ml2/: pyproject.toml
ml2/order_microservice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ml2/src/order_microservice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ml2/src/orderapp/: main.py
ml5/: pyproject.toml
ml5/async_rider_service.egg-info/: top_level.txt
ml5/src/riderapp/: main.py
nlpws/: pyproject.toml
supervisedml/: pyproject.toml
supervisedml/src/supervised_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
supervisedml/supervised_ml.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+241 files in other folders)
