[project]
name = "linearalgebra"
version = "0.1.0"
description = "Linear algebra utilities package"
requires-python = ">=3.9"

dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "sympy>=1.12",
    "python-dotenv>=0.21",
    "opencv-python>=4.8",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
]
dev = [
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=linearalgebra --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
