#create toml file
[project]
name = "banking_project"
version = "0.1.0"
description = "A simple banking project implemented in Python."
authors = [
    { name = "Parameswari Bala", email = "parameswaribala@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "pydantic[email]>=2.0.0",
    "python-dotenv>=0.19.0",
    "faker>=18.0.0",
    "pandas>=2.0.0" 
]   
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.0.0"
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[tool.black]
line-length = 88
target-version = ["py313"]
[tool.isort]
profile = "black"
