[project]
name = "asyncio-dashboard"
version = "0.1.0"
description = "A dashboard for monitoring asyncio applications."
authors = [
    { name = "Paramswari", email = "parameswaribala@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faker>=18.0.0",
    "pydantic>=2.0.0",   
    "pydantic[email]>=2.0.0",
    "python-dotenv>=0.19.0",
    "pandas>=2.0.0",
    "aiohttp>=3.8.0",
    "asyncio>=3.4.0",
    "psutil>=5.9.0",
    "websockets>=10.0.0"
]
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.0.0"
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
async_dashboard = [".env"]
[tool.black]
line-length = 88
target-version = ["py313"]
[tool.isort]
profile = "black"
