[project]
name = "supervised-ml"
version = "0.1.0"
description = "Supervised Machine Learning Models - Classification and Regression"
authors = [
    { name = "Parameswari", email = "parameswaribala@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "matplotlib>=3.0.0",
    "seaborn>=0.13.0",
    "scipy>=1.0.0",
    "statsmodels>=0.14.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "joblib>=1.3.0",
    "python-dotenv>=0.19.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.15.0",
    "skl2onnx>=1.15.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "isort>=5.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
